Fix broken links from restructure.

--- a/Events.html
+++ b/Events.html
@@ -2,37 +2,45 @@
 <html xmlns="http://www.w3.org/1999/xhtml"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 <title>Events</title>
-<link href="./Events_files/StyleSheet.css" rel="stylesheet" type="text/css">
-<script src="./Events_files/SpryMenuBar.js" type="text/javascript"></script>
-<link href="./Events_files/SpryMenuBarHorizontal.css" rel="stylesheet" type="text/css">
-<style type="text/css"></style></head>
+<link href="./styles/StyleSheet.css" rel="stylesheet" type="text/css">
+<script src="./scripts/SpryMenuBar.js" type="text/javascript"></script><style type="text/css"></style>
+<link href="./styles/SpryMenuBarHorizontal.css" rel="stylesheet" type="text/css">
+</head>
 
 <body>
 
 <div class="container">
-  <div class="header"><!-- end .header --><img src="./Events_files/Banner.png" width="1001" height="481"></div>
+  <div class="header"><!-- end .header --><img src="./images/Banner.png" width="1001" height="481"></div>
   <ul id="MenuBar1" class="MenuBarHorizontal">
-    <li><a href="http://rollarobotics.com/Index.html">
+    <li>
+    <a href="./Index.html">
       <center>
         Home
       </center>
-    </a></li>
-    <li><a href="http://rollarobotics.com/Teams.html">
+    </a>
+    </li>
+    <li><a href="./Teams.html">
       <center>
         Teams
       </center>
-    </a></li>
-    <li><a href="./Events_files/Events.html">
+    </a>
+    </li>
+    <li><a href="./Events.html">
       <center>
         Upcoming Events
       </center>
-    </a></li>
-    <li><a href="http://rollarobotics.com/Sponsors.html">
+    </a>
+    </li>
+    <li><a href="./Sponsors.html">
       <center>
         Sponsors
       </center>
     </a></li>
-    <li><a href="http://rollarobotics.com/Contact.html" class="">Contact Us</a></li>
+    <li><a href="./Contact.html">
+        <center>
+            Contact Us
+        </center>
+    </a></li>
   </ul>
   <div class="sidebar1"><!-- end .sidebar1 --></div>
   <div class="content">
