--- a/Rolla Robotics.html
+++ b/Rolla Robotics.html
@@ -4,39 +4,39 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Rolla Robotics</title>
-<link href="../Rolla Robotics_files/StyleSheet.css" rel="stylesheet" type="text/css">
-<script src="../Rolla Robotics_files/SpryMenuBar.js" type="text/javascript"></script><style type="text/css"></style>
-<link href="../Rolla Robotics_files/SpryMenuBarHorizontal.css" rel="stylesheet" type="text/css">
+<link href="./styles/StyleSheet.css" rel="stylesheet" type="text/css">
+<script src="./scripts/SpryMenuBar.js" type="text/javascript"></script><style type="text/css"></style>
+<link href="./styles/SpryMenuBarHorizontal.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <div class="container">
-  <div class="header"><!-- end .header --><img src="../Rolla Robotics_files/Banner.png" width="1001" height="481" alt="Rolla Robotics Banner">
+  <div class="header"><!-- end .header --><img src="./images/Banner.png" width="1001" height="481" alt="Rolla Robotics Banner">
   <ul id="MenuBar1" class="MenuBarHorizontal">
     <li>
-    <a href="http://rollarobotics.com/Index.html">
+    <a href="./Index.html">
       <center>
         Home
       </center>
     </a>
     </li>
-    <li><a href="http://rollarobotics.com/Teams.html">
+    <li><a href="./Teams.html">
       <center>
         Teams
       </center>
     </a>
     </li>
-    <li><a href="http://rollarobotics.com/Events.html">
+    <li><a href="./Events.html">
       <center>
         Upcoming Events
       </center>
     </a>
     </li>
-    <li><a href="http://rollarobotics.com/Sponsors.html">
+    <li><a href="./Sponsors.html">
       <center>
         Sponsors
       </center>
     </a></li>
-    <li><a href="http://rollarobotics.com/Contact.html">
+    <li><a href="./Contact.html">
         <center>
             Contact Us
         </center>
