--- a/Teams.html
+++ b/Teams.html
@@ -2,52 +2,56 @@
 <head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 <title>Teams</title>
-<link href="./Teams_files/StyleSheet.css" rel="stylesheet" type="text/css">
-<script src="./Teams_files/SpryMenuBar.js" type="text/javascript"></script>
-<link href="./Teams_files/SpryMenuBarHorizontal.css" rel="stylesheet" type="text/css">
-<style type="text/css"></style></head>
+<link href="./styles/StyleSheet.css" rel="stylesheet" type="text/css">
+<script src="./scripts/SpryMenuBar.js" type="text/javascript"></script><style type="text/css"></style>
+<link href="./styles/SpryMenuBarHorizontal.css" rel="stylesheet" type="text/css">
+</head>
 
 <body>
 
 <div class="container">
-  <div class="header"><!-- end .header --><img src="./Teams_files/Banner.png" width="1001" height="481"></div>
+  <div class="header"><!-- end .header --><img src="./images/Banner.png" width="1001" height="481"></div>
   <ul id="MenuBar1" class="MenuBarHorizontal">
-    <li><a href="http://rollarobotics.com/Index.html">
+    <li>
+    <a href="./Index.html">
       <center>
         Home
       </center>
-    </a></li>
-    <li><a href="./Teams_files/Teams.html">
+    </a>
+    </li>
+    <li><a href="./Teams.html">
       <center>
         Teams
       </center>
-    </a></li>
-    <li><a href="http://rollarobotics.com/Events.html" class="MenuBarItemHover">
+    </a>
+    </li>
+    <li><a href="./Events.html">
       <center>
         Upcoming Events
       </center>
-    </a></li>
-    <li><a href="http://rollarobotics.com/Sponsors.html">
+    </a>
+    </li>
+    <li><a href="./Sponsors.html">
       <center>
         Sponsors
       </center>
     </a></li>
-    <li>
-    <center>
-   <a href="http://rollarobotics.com/Contact.html">Contact Us</a>
-    </center>
-    </li>
+    <li><a href="./Contact.html">
+        <center>
+            Contact Us
+        </center>
+    </a></li>
   </ul>
   <div class="sidebar1"><!-- end .sidebar1 --></div>
   <div class="content">
     <h1 align="center">Team 4964 </h1>
-    <p align="center"><img src="./Teams_files/Patriots Logo.gif" alt="Rolla Patriots" width="500" height="146"></p>
+    <p align="center"><img src="./images/Patriots Logo.gif" alt="Rolla Patriots" width="500" height="146"></p>
     <p align="center">&nbsp;</p>
     <h1 align="center">Team 6168</h1>
-    <p align="center"><img src="./Teams_files/MM Logo.png" width="400" height="294" alt="Maniacal Mechanics"></p>
+    <p align="center"><img src="./images/MM Logo.png" width="400" height="294" alt="Maniacal Mechanics"></p>
     <p align="center">&nbsp;</p>
     <h1 align="center">Team 5893</h1>
-    <p align="center"><img src="./Teams_files/DC Logo.png" width="500" height="164" alt="Direct Current"></p>
+    <p align="center"><img src="./images/DC Logo.png" width="500" height="164" alt="Direct Current"></p>
     <p><br>
     All Three teams are based in the Rolla Community and do their best to  promote FIRST through collaboration with local businesses, other FTC teams, and  school activites.</p>
        <!-- end .content --></div>
