--- a/Sponsors.html
+++ b/Sponsors.html
@@ -1,43 +1,51 @@
 <!DOCTYPE html >
 
 <title>Sponsors</title>
-<link href="./Sponsors_files/StyleSheet.css" rel="stylesheet" type="text/css">
-<script src="./Sponsors_files/SpryMenuBar.js" type="text/javascript"></script>
-<link href="./Sponsors_files/SpryMenuBarHorizontal.css" rel="stylesheet" type="text/css">
-<style type="text/css"></style></head>
+<link href="./styles/StyleSheet.css" rel="stylesheet" type="text/css">
+<script src="./scripts/SpryMenuBar.js" type="text/javascript"></script><style type="text/css"></style>
+<link href="./styles/SpryMenuBarHorizontal.css" rel="stylesheet" type="text/css">
+</head>
 
 <body>
 
 <div class="container">
-  <div class="header"><!-- end .header --><img src="./Sponsors_files/Banner.png" width="1001" height="481"></div>
+  <div class="header"><!-- end .header --><img src="./images/Banner.png" width="1001" height="481"></div>
   <ul id="MenuBar1" class="MenuBarHorizontal">
-    <li><a href="http://rollarobotics.com/Index.html">
+    <li>
+    <a href="./Index.html">
       <center>
         Home
       </center>
-    </a></li>
-    <li><a href="http://rollarobotics.com/Teams.html">
+    </a>
+    </li>
+    <li><a href="./Teams.html">
       <center>
         Teams
       </center>
-    </a></li>
-    <li><a href="http://rollarobotics.com/Events.html">
+    </a>
+    </li>
+    <li><a href="./Events.html">
       <center>
         Upcoming Events
       </center>
-    </a></li>
-    <li><a href="./Sponsors_files/Sponsors.html">
+    </a>
+    </li>
+    <li><a href="./Sponsors.html">
       <center>
         Sponsors
       </center>
     </a></li>
-    <li><a href="http://rollarobotics.com/Contact.html"></a></li>
+    <li><a href="./Contact.html">
+        <center>
+            Contact Us
+        </center>
+    </a></li>
   </ul>
   <div class="sidebar1"><!-- end .sidebar1 --></div>
   <div class="content">
     <h1 align="center"> Special Thanks to the Following Sponsors:</h1>
     <p align="center">&nbsp;</p>
-    <p align="center"><a href="http://www.robotshop.com/"><img src="./Sponsors_files/robotshop-logo-345x100-en.gif" width="345" height="100" alt="RobotShop"></a></p>
+    <p align="center"><a href="http://www.robotshop.com/"><img src="./images/robotshop-logo-345x100-en.gif" width="345" height="100" alt="RobotShop"></a></p>
     <h4 align="center"><a href="http://www.robotshop.com/" title="www.robotshop.com" target="_top">www.robotshop.com</a></h4>
     <h4 align="center">Brewer Science</h4>
     <h4 align="center">Rolla High School</h4>
