--- a/Index.html
+++ b/Index.html
@@ -1,53 +1,20 @@
 <!DOCTYPE html>
-<!-- saved from url=(0025)http://rollarobotics.com/ -->
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>Rolla Robotics</title>
 <link href="./styles/StyleSheet.css" rel="stylesheet" type="text/css">
 <script src="./scripts/jquery-1.11.2.min.js" type="text/javascript"></script>
+<script src="./scripts/handlebars-v2.0.0.js" type="text/javascript"></script>
 <script src="./scripts/jquery-ui-1.11.2/jquery-ui.min.js" type="text/javascript"></script>
 <link href="./scripts/jquery-ui-1.11.2/jquery-ui.min.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 <div class="container">
   <div class="header"><!-- end .header --><img src="./images/Banner.png" width="1001" height="481" alt="Rolla Robotics Banner"></div>
-  <div class="sidebar1">
-  <ul id="MenuBar1" class="MenuBarHorizontal">
-    <li>
-    <a href="./Index.html">
-      <center>
-        Home
-      </center>
-    </a>
-    </li>
-    <li><a href="./Teams.html">
-      <center>
-        Teams
-      </center>
-    </a>
-    </li>
-    <li><a href="./Events.html">
-      <center>
-        Upcoming Events
-      </center>
-    </a>
-    </li>
-    <li><a href="./Sponsors.html">
-      <center>
-        Sponsors
-      </center>
-    </a></li>
-    <li><a href="./Contact.html">
-        <center>
-            Contact Us
-        </center>
-    </a></li>
-  </ul>
-  <!-- end .sidebar1 --></div>
+  <div id="sidebar1" class="sidebar1"></div>
   <div class="content">
     <h1>What is Rolla Robotics?</h1>
-    <p>Rolla Robotics is a collective of three teams that participate annually in  the FIRST FTC program. FIRST stands for "For Inspiration and Recognition  of Science and Technology." The goal of FIRST is to inspire young people to be science and technology leaders by engaging them in exciting mentor-based  programs that build science, engineering and technology skills, inspire innovation and foster well-rounded life capabilities including  self-confidence, communication, and leadership. One of the FIRST competitions is FTC,  which stands for "FIRST Tech Challenge." This is a competition designed for interested 8th graders through seniors. The competition is alliance based, red alliance versus blue alliance, with two teams per alliance.  Awards are given for the competition as well as for community outreach, design, and other real-world accomplishments. Please visit <a href="http://www.usfirst.org/">www3.usfirst.org</a> to learn more.</p>
+    <p>Rolla Robotics is a collective of three teams that participate annually in the FIRST FTC program. FIRST stands for "For Inspiration and Recognition  of Science and Technology." The goal of FIRST is to inspire young people to be science and technology leaders by engaging them in exciting mentor-based  programs that build science, engineering and technology skills, inspire innovation and foster well-rounded life capabilities including  self-confidence, communication, and leadership. One of the FIRST competitions is FTC,  which stands for "FIRST Tech Challenge." This is a competition designed for interested 8th graders through seniors. The competition is alliance based, red alliance versus blue alliance, with two teams per alliance.  Awards are given for the competition as well as for community outreach, design, and other real-world accomplishments. Please visit <a href="http://www.usfirst.org/">www3.usfirst.org</a> to learn more.</p>
     <p>
     <br>
       All three teams are based in the Rolla Community and do their best to  promote FIRST through collaboration with local businesses, other FTC teams, and school activites.</p>
@@ -59,7 +26,11 @@
     <p>Rolla Robotics © copyright. All Rights Reserved. Page Last Updated: 02/25/14</p>
 <script type="text/javascript">
 $(function() {
-	$("#MenuBar1").menu();
+	$.get("./scripts/menubar_template.txt", function(template) {
+		var menubar = Handlebars.compile(template);
+		$("#sidebar1").html(menubar());
+		$("#MenuBar1").menu();
+	});
 });
 </script>
 </body>
