--- a/Sponsors.html
+++ b/Sponsors.html
@@ -2,51 +2,21 @@
 
 <title>Sponsors</title>
 <link href="./styles/StyleSheet.css" rel="stylesheet" type="text/css">
-<script src="./scripts/SpryMenuBar.js" type="text/javascript"></script><style type="text/css"></style>
-<link href="./styles/SpryMenuBarHorizontal.css" rel="stylesheet" type="text/css">
+<script src="./scripts/jquery-1.11.2.min.js" type="text/javascript"></script>
+<script src="./scripts/handlebars-v2.0.0.js" type="text/javascript"></script>
+<script src="./scripts/jquery-ui-1.11.2/jquery-ui.min.js" type="text/javascript"></script>
+<link href="./scripts/jquery-ui-1.11.2/jquery-ui.min.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
 
 <div class="container">
   <div class="header"><!-- end .header --><img src="./images/Banner.png" width="1001" height="481"></div>
-  <ul id="MenuBar1" class="MenuBarHorizontal">
-    <li>
-    <a href="./Index.html">
-      <center>
-        Home
-      </center>
-    </a>
-    </li>
-    <li><a href="./Teams.html">
-      <center>
-        Teams
-      </center>
-    </a>
-    </li>
-    <li><a href="./Events.html">
-      <center>
-        Upcoming Events
-      </center>
-    </a>
-    </li>
-    <li><a href="./Sponsors.html">
-      <center>
-        Sponsors
-      </center>
-    </a></li>
-    <li><a href="./Contact.html">
-        <center>
-            Contact Us
-        </center>
-    </a></li>
-  </ul>
-  <div class="sidebar1"><!-- end .sidebar1 --></div>
+  <div id="sidebar1" class="sidebar1"></div>
   <div class="content">
     <h1 align="center"> Special Thanks to the Following Sponsors:</h1>
     <p align="center">&nbsp;</p>
     <p align="center"><a href="http://www.robotshop.com/"><img src="./images/robotshop-logo-345x100-en.gif" width="345" height="100" alt="RobotShop"></a></p>
-    <h4 align="center"><a href="http://www.robotshop.com/" title="www.robotshop.com" target="_top">www.robotshop.com</a></h4>
     <h4 align="center">Brewer Science</h4>
     <h4 align="center">Rolla High School</h4>
     <h4 align="center">Rob Van Hoose</h4>
@@ -74,8 +44,12 @@
   <!-- end .footer --></div>
   <!-- end .container --></div>
 <script type="text/javascript">
-var MenuBar1 = new Spry.Widget.MenuBar("MenuBar1", {imgDown:"SpryAssets/SpryMenuBarDownHover.gif", imgRight:"SpryAssets/SpryMenuBarRightHover.gif"});
+$(function() {
+	$.get("./scripts/menubar_template.txt", function(template) {
+		var menubar = Handlebars.compile(template);
+		$("#sidebar1").html(menubar());
+		$("#MenuBar1").menu();
+	});
+});
 </script>
-
-
 </body></html>
