--- a/Contact.html
+++ b/Contact.html
@@ -1,11 +1,15 @@
+
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Teams</title>
+<title>Rolla Robotics</title>
+
 <link href="StyleSheet.css" rel="stylesheet" type="text/css" />
+
 <script src="SpryAssets/SpryMenuBar.js" type="text/javascript"></script>
 <link href="SpryAssets/SpryMenuBarHorizontal.css" rel="stylesheet" type="text/css" />
+
 </head>
 
 <body>
@@ -33,21 +37,28 @@
         Sponsors
       </center>
     </a></li>
-    <li><a href="Contact.html">Contact Us</a></li>
+    <li><a href="#">Contact Us</a></li>
   </ul>
-  <div class="sidebar1"><!-- end .sidebar1 --></div>
+  <div class="sidebar1"></div>
   <div class="content">
-    <h1 align="center">Team 4964 </h1>
-    <p align="center"><img src="Images/Patriots Logo.gif" alt="Rolla Patriots" width="500" height="146" /></p>
+    <h1 align="center">Contact Us    </h1>
+    <p align="center">Interested in seeing what we do? <br> 
+  </p>
+    <p align="center">Interested in joining a team or starting your own? </p>
+    <p align="center">Are you knowledgeable about mechanics or programming and want to mentor for us? </p>
+    <p align="center">If so we'd love to hear from you!</p>
+    <hr />
     <p align="center">&nbsp;</p>
-    <h1 align="center">Team 6168</h1>
-    <p align="center"><img src="Images/MM Logo.png" width="400" height="294" alt="Maniacal Mechanics" /></p>
+    <p align="center">- Give us a call -</p>
+    <p align="center"><strong>636 - 541 - 5217 </strong></p>
+    <p align="center">	- or come visit -</p>
+    <p align="center"><strong>900 Bulldog Run | Rolla, MO 65401</strong></p>
     <p align="center">&nbsp;</p>
-    <h1 align="center">Team 5893</h1>
-    <p align="center"><img src="Images/DC Logo.png" width="500" height="164" alt="Direct Current" /></p>
-    <p><br />
-    All Three teams are based in the Rolla Community and do their best to  promote FIRST through collaboration with local businesses, other FTC teams, and  school activites.</p>
-       <!-- end .content --></div>
+    <hr />
+    <p align="center">&nbsp;</p>
+    <p align="center"><!-- end .content -->Also feel free to <a href="https://rolla.revtrak.net/tek9.asp?pg=products&specific=joiqipn4">donate</a> at our school district webstore.</p>
+    <p align="center">&nbsp;</p>
+  </div>
   <div class="sidebar2">
     <h4><!-- end .sidebar2 --></h4>
   </div>
