--- a/Sponsors.html
+++ b/Sponsors.html
@@ -1,43 +1,45 @@
-<!DOCTYPE html >
-
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Sponsors</title>
-<link href="./Sponsors_files/StyleSheet.css" rel="stylesheet" type="text/css">
-<script src="./Sponsors_files/SpryMenuBar.js" type="text/javascript"></script>
-<link href="./Sponsors_files/SpryMenuBarHorizontal.css" rel="stylesheet" type="text/css">
-<style type="text/css"></style></head>
+<link href="StyleSheet.css" rel="stylesheet" type="text/css" />
+<script src="SpryAssets/SpryMenuBar.js" type="text/javascript"></script>
+<link href="SpryAssets/SpryMenuBarHorizontal.css" rel="stylesheet" type="text/css" />
+</head>
 
 <body>
 
 <div class="container">
-  <div class="header"><!-- end .header --><img src="./Sponsors_files/Banner.png" width="1001" height="481"></div>
+  <div class="header"><!-- end .header --><img src="Images/Banner.png" width="1001" height="481" /></div>
   <ul id="MenuBar1" class="MenuBarHorizontal">
-    <li><a href="http://rollarobotics.com/Index.html">
+    <li><a href="Index.html">
       <center>
         Home
       </center>
     </a></li>
-    <li><a href="http://rollarobotics.com/Teams.html">
+    <li><a href="Teams.html">
       <center>
         Teams
       </center>
     </a></li>
-    <li><a href="http://rollarobotics.com/Events.html">
+    <li><a href="Events.html">
       <center>
         Upcoming Events
       </center>
     </a></li>
-    <li><a href="./Sponsors_files/Sponsors.html">
+    <li><a href="Sponsors.html">
       <center>
         Sponsors
       </center>
     </a></li>
-    <li><a href="http://rollarobotics.com/Contact.html"></a></li>
+    <li><a href="Contact.html">Contact Us</a></li>
   </ul>
   <div class="sidebar1"><!-- end .sidebar1 --></div>
   <div class="content">
     <h1 align="center"> Special Thanks to the Following Sponsors:</h1>
     <p align="center">&nbsp;</p>
-    <p align="center"><a href="http://www.robotshop.com/"><img src="./Sponsors_files/robotshop-logo-345x100-en.gif" width="345" height="100" alt="RobotShop"></a></p>
+    <p align="center"><a href="http://www.robotshop.com/"><img src="Images/RobotShop Logos/robotshop-logo-345x100-en.gif" width="345" height="100" alt="RobotShop" /></a></p>
     <h4 align="center"><a href="http://www.robotshop.com/" title="www.robotshop.com" target="_top">www.robotshop.com</a></h4>
     <h4 align="center">Brewer Science</h4>
     <h4 align="center">Rolla High School</h4>
@@ -68,6 +70,5 @@
 <script type="text/javascript">
 var MenuBar1 = new Spry.Widget.MenuBar("MenuBar1", {imgDown:"SpryAssets/SpryMenuBarDownHover.gif", imgRight:"SpryAssets/SpryMenuBarRightHover.gif"});
 </script>
-
-
-</body></html>
+</body>
+</html>
